stretch content to correctly pass space

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,7 +1,7 @@
 :root {
     --border-radius: 0.5rem;
     --fingerprint-size: 3rem;
-    --content-width: 14rem;
+    --content-width: 14.5rem;
 }
 
 body {
